--- a/style.scss
+++ b/style.scss
@@ -27,26 +27,59 @@ body {
   > .card {
     border-radius: 10px;
     overflow: hidden;
-    height: 450px;
-    width: 350px;
+    height: 380px;
+    width: 370px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: white;
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+    //box-shadow: 0 0 15px var(--very-dark-desaturated-blue);
+    > img {
+      margin-top: -20px;
+      width: 380px;
+    }
     > .card__mid {
+      margin-top: -45px;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      text-align: center;
+
       > .card__avatar {
-        height: 75px;
-        width: 75px;
+        height: 90px;
+        width: 90px;
+        margin: 0 auto;
         border-radius: 50%;
         border: 2px solid white;
       }
-    }
-    > .card__mid::after {
+      > h1 {
+        span {
+          color: var(--dark-gray);
+          font-weight: normal;
+        }
+      }
+      > p {
+        margin-top: 0rem;
+        font-size: 0.9rem;
+        color: var(--dark-gray);
+        font-weight: normal;
+      }
     }
     > .card__bottom {
       display: flex;
       justify-content: center;
       gap: 1.5rem;
+      text-align: center;
+
+      > .column {
+        > p {
+          font-size: 0.7rem;
+          color: var(--dark-gray);
+          letter-spacing: 0.1rem;
+        }
+      }
     }
   }
   > footer {
