--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   font-family: "Kumbh Sans", sans-serif;
+  color: var(--very-dark-desaturated-blue);
   > .card {
     border-radius: 10px;
     overflow: hidden;
@@ -46,13 +47,12 @@ body {
       flex-direction: column;
       justify-content: center;
       text-align: center;
-
       > .card__avatar {
         height: 90px;
         width: 90px;
         margin: 0 auto;
         border-radius: 50%;
-        border: 2px solid white;
+        border: 5px solid white;
       }
       > h1 {
         span {
@@ -83,6 +83,11 @@ body {
     }
   }
   > footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
     > .attribution {
       font-size: 11px;
       text-align: center;
@@ -91,5 +96,18 @@ body {
       color: hsl(228, 45%, 44%);
       font-size: 11px;
     }
+  }
+}
+
+.card__mid::after {
+  content: "";
+  border-bottom: 1px solid var(--dark-gray);
+  width: 380px;
+  opacity: 0.3;
+}
+
+@media all and (max-width: 375px) {
+  body {
+    height: auto;
   }
 }
