--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@ body {
 }
 
 body > .card {
-  border-radius: 10px;
+  border-radius: 20px;
   overflow: hidden;
   height: 380px;
-  width: 370px;
+  width: 340px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -142,7 +142,7 @@ body > footer > .attribution a {
 
 @media all and (max-width: 375px) {
   body {
-    height: auto;
+    height: 50%;
   }
 }
 /*# sourceMappingURL=style.css.map */
